gitops/catalog-coolstore-route.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    labels:
      app: coolstore
      app.kubernetes.io/instance: catalog
      app.kubernetes.io/managed-by: odo
      app.kubernetes.io/managed-by-version: v1.0.2
      app.kubernetes.io/part-of: coolstore
      odo.openshift.io/url-name: catalog
    name: catalog-coolstore
  spec:
    port:
      targetPort: 8080
    to:
      kind: Service
      name: catalog-coolstore
      weight: 100
    wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
