gitops/gateway-coolstore-route.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    labels:
      app: coolstore
      app.kubernetes.io/instance: gateway
      app.kubernetes.io/managed-by: odo
      app.kubernetes.io/managed-by-version: v1.0.2
      app.kubernetes.io/part-of: coolstore
      odo.openshift.io/url-name: gateway
    name: gateway-coolstore
    ownerReferences:
    - apiVersion: apps.openshift.io/v1
      kind: DeploymentConfig
      name: gateway-coolstore
      uid: e8386356-c6f5-4574-8822-b1a63de7083f
  spec:
    host: gateway-coolstore-staging-project7.apps.cluster-nantes-c90c.nantes-c90c.example.opentlc.com
    port:
      targetPort: 8080
    to:
      kind: Service
      name: gateway-coolstore
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - status: "True"
        type: Admitted
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
